--- a/ParkHere/app/src/main/res/values/strings.xml
+++ b/ParkHere/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="home">Home</string>
     <string name="notification">Notification</string>
     <string name="profile">Profile</string>
+    <string name="action_location">location</string>
 </resources>
