--- a/ParkHere/app/src/main/res/values/strings.xml
+++ b/ParkHere/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="cancel">CANCEL</string>
+    <string name="logout">Log out</string>
 
     <!--inn profile layout-->
     <string name="myplaces">My Places</string>
