Added the Post Information activity. Called when the user clicks on a post from the home list.

--- a/ParkHere/app/src/main/res/values/strings.xml
+++ b/ParkHere/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
         <item>Yes</item>
         <item>No</item>
     </string-array>
+    <string name="title_activity_post_information">PostInformationActivity</string>
 
 </resources>
