--- a/ParkHere/app/src/main/res/values/strings.xml
+++ b/ParkHere/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="cancel">CANCEL</string>
     <string name="logout">Log out</string>
-
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
     <!--inn profile layout-->
     <string name="myplaces">My Places</string>
     <string name="myprofile">My Profiles</string>
