Added split-booking logic

--- a/ParkHere/app/src/main/res/values/strings.xml
+++ b/ParkHere/app/src/main/res/values/strings.xml
@@ -70,5 +70,6 @@
         <item>No</item>
     </string-array>
     <string name="title_activity_post_information">PostInformationActivity</string>
+    <string name="title_activity_booking">BookingActivity</string>
 
 </resources>
