--- a/ParkHere/app/src/main/res/values/strings.xml
+++ b/ParkHere/app/src/main/res/values/strings.xml
@@ -11,9 +11,15 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="cancel">CANCEL</string>
+    <string name="select">SELECT</string>
     <string name="logout">Log out</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="author">Author: </string>
+    <string name="post">Post</string>
+    <string name="book">Book</string>
+    <string name="enter_title">Enter title</string>
+    <string name="next">NEXT</string>
     <!--inn profile layout-->
     <string name="myplaces">My Places</string>
     <string name="myprofile">My Profiles</string>
