--- a/ParkHere/app/src/main/res/values/strings.xml
+++ b/ParkHere/app/src/main/res/values/strings.xml
@@ -78,5 +78,7 @@
         <item>Yes</item>
         <item>No</item>
     </string-array>
+    <string name="title_activity_post_information">PostInformationActivity</string>
+    <string name="title_activity_booking">BookingActivity</string>
 
 </resources>
